fix(expert game state)